# AIEngineeringProgram

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ADMIN_GUIDE.md  ALPHA_INTERACTIVE_COMPLETE.md  ALPHA_READINESS_VERIFICATION.md  AUDIT_COMPARISON_ANALYSIS.md  AUDIT_COMPLETE_FINAL_SUMMARY.md  AUDIT_COMPLETE_SUMMARY.txt  AUDIT_FINAL_REPORT_WITH_SWE_SPEC.md  AUDIT_REPORT.md  AUDIT_VISUAL_SUMMARY.md  BACKEND_INTEGRATION_COMPLETE.md  CLEANUP_SUMMARY.md  CLI_INTEGRATION_SUMMARY.md  CLI_RICH_IMPLEMENTATION_COMPLETE.md  COMPLETE_ROADMAP_SUMMARY.md  COMPLETION_REPORT.md  COMPREHENSIVE_ASSESSMENT_SUMMARY.md  COMPREHENSIVE_CODEBASE_AUDIT_2025.md  CONFIGURATION_SUMMARY.md  CONVERSATION_ENGINE_IMPLEMENTATION.md  CONVERSATION_FLOW_EXAMPLES.md  DOCKER.md  Dockerfile  E2E_TEST_RESULTS.md  E2E_TEST_SUMMARY.md  E2E_TEST_WORKING_SUMMARY.md  EXECUTIVE_SUMMARY_FOR_USER.md  EngineeringProgram errors.md  FINAL_DELIVERY_SUMMARY.md  FINAL_E2E_SUMMARY.md  FINAL_PROGRESS_REPORT.md  FINAL_TEST_ASSESSMENT.md  FIX_SUMMARY.md  FRONTEND_AUDIT_AND_ROADMAP.md  FRONTEND_READY.md  FRONTEND_SETUP_COMPLETE.md  FULL_STACK_ASSESSMENT_REPORT.md  (+99 more)
archive/: ALPHA_RELEASE_STATUS.md  ATOMIC_TASK_LIST_PHASE1.md  AUDIT_DOCUMENTS_INDEX.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_REPORT.md  CHARTER_EXPORT_SUMMARY.md  CHECKPOINT_LOG.md  CLI_ENHANCEMENT_SUMMARY.md  CLI_QUICK_REFERENCE.md  CLI_RICH_ENHANCEMENT_GUIDE.md  COMPREHENSIVE_SUMMARY.md  DETAILED_TECHNICAL_FINDINGS.md  E2E_DEMO_SCENARIO.md  EXECUTION_SUMMARY.md  FINAL_COMPREHENSIVE_STATUS.md  FRONTEND_LIVE_VERIFICATION.md  FRONTEND_PLANNING_GRAPHICAL_UI.md  FULL_STACK_AUDIT_REPORT_2025.md  IMPLEMENTATION_GUIDE_PHASE1_AND_FRONTEND.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_SUCCESS_SUMMARY.md  LIVE_INTEGRATION_PROGRESS.md  PHASE1_COMPLETION_REPORT.md  PHASE1_EXECUTION_COMPLETE.md  PHASE2_ATOMIC_TASKS.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_OVERVIEW.md  PHASE2_READY_TO_EXECUTE.md  PHASE3_CURRENT_STATUS.md  PHASE3_SUMMARY.md  PHASE3_TASK4_COMPLETE.md  PHASE3_TASK4_SUMMARY.md  PHASE3_TASK5_COMPLETE.md  PLAYWRIGHT_E2E_COMPLETE_GUIDE.md  PLAYWRIGHT_QUICK_REFERENCE.md  PROJECT_STATUS_ANALYSIS.md  PROJECT_WORKFLOW.md  QUICKSTART_LLM_CONFIG.md  QUICK_REFERENCE.md  QUICK_START.md  (+10 more)
archive/audit_reports/: COMPREHENSIVE_AUDIT_REPORT_2025.md
archive/older_docs/: DELIVERABLES_SUMMARY.md  INTEGRATION_TEST_RESULTS.md  OLLAMA_INTEGRATION_SUMMARY.md  P2B_SESSION_COMPLETE.md  QUICK_START_INTEGRATED_BACKEND.md  test_ollama_integration.py
archive/session_notes/: P2A_BLOCKERS_FIXED.md
charters/: .gitkeep
cli-tui/: README.md  package.json  tsconfig.json
cli-tui/src/: index.tsx
config/: llm_config.example.yaml  llm_config_ollama.yaml
database/: init.sql
docs/: ADMIN_GUIDE.md  LLM_CONFIGURATION.md  LLM_COST_OPTIMIZATION_STRATEGY.md  OLLAMA_SETUP_GUIDE.md  SYSTEM_ARCHITECTURE.md  USER_GUIDE.md
examples/: llm_usage_example.py
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/e2e/: questionnaire-to-charter.spec.ts  simple-flow.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css
frontend/test-results/: .last-run.json
migrations/: env.py
migrations/versions/: 03033cebb647_initial_schema_from_init_sql.py  04_add_users_table.py  05_add_encryption_support.py  91652a9f0ca1_initial_schema_from_init_sql.py
scripts/: quality-gate-1.sh  quality-gate-3.sh  setup_test_db.py  test_ollama_connection.py
security/: .gitkeep
src/: __init__.py  exceptions.py
src/agents/: __init__.py  orchestrator.py  stage1_business_translation.py  stage2_agent.py  stage3_agent.py  stage4_agent.py  stage5_agent.py
src/api/: __init__.py  app.py  main.py  models.py  rate_limiting.py
src/auth/: __init__.py  encryption.py  security.py
src/cli/: __init__.py  interactive.py  main.py  utils.py
src/conversation/: __init__.py  context.py  engine.py  types.py
src/database/: __init__.py  connection.py
src/export/: __init__.py  charter_generator.py
src/llm/: base.py  config.py  router.py
src/models/: __init__.py  schemas.py
src/monitoring/: __init__.py
src/services/: progress_service.py
src/tools/: __init__.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_authentication_api.py  test_cli_delete_and_status_commands.py  test_cli_list_command.py  test_cli_main.py  test_cli_resume_command.py  test_cli_start_command.py  test_database_connection.py  test_logging_sanitizer.py  test_orchestrator.py  test_progress_service.py  test_project_setup.py  test_rate_limiting.py  test_rest_api.py  test_runtime_type_validation.py  test_session_repository.py  test_stage_data_repository.py
(+100 files in other folders)
